bank-project/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  namespace: bank
  annotations:
    kubernetes.io/ingress.class: "external-nginx"
    cert-manager.io/cluster-issuer: http-01-production
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: external-nginx
  tls:
  - hosts:
    - bankapi.ofiliyoungyz.online  # bankend url
    - bank.ofiliyoungyz.online     # frontend url
    secretName: bank-ofiliyoungyz-online
  rules:
  - host: bank.ofiliyoungyz.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bank-frontend-service
            port:
              number: 3000
  - host: bankapi.ofiliyoungyz.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bank-backend-service
            port:
              number: 8080
